@startuml

title __SIMPLE's Class Diagram__\n

  namespace simple {
    class simple.ItemList {
        ~ items : List
        - sp : String
        + ItemList()
        + ItemList()
        + ItemList()
        + ItemList()
        + add()
        + add()
        + addAll()
        + addAll()
        + addAll()
        + addAll()
        + clear()
        + get()
        + getArray()
        + getItems()
        + reset()
        + setSP()
        + size()
        + split()
        + split()
        + toString()
        + toString()
    }
  }
  

  namespace simple {
    class simple.JSONArray {
        {static} - serialVersionUID : long
        + JSONArray()
        + JSONArray()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        {static} + toJSONString()
        + toJSONString()
        + toString()
        {static} + writeJSONString()
        + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
        {static} + writeJSONString()
    }
  }
  

  namespace simple {
    interface simple.JSONAware {
        {abstract} + toJSONString()
    }
  }
  

  namespace simple {
    class simple.JSONObject {
        {static} - serialVersionUID : long
        + JSONObject()
        + JSONObject()
        {static} + escape()
        {static} + toJSONString()
        + toJSONString()
        + toString()
        {static} + toString()
        {static} + writeJSONString()
        + writeJSONString()
    }
  }
  

  namespace simple {
    interface simple.JSONStreamAware {
        {abstract} + writeJSONString()
    }
  }
  

  namespace simple {
    class simple.JSONValue {
        {static} + escape()
        {static} + parse()
        {static} + parse()
        {static} + parseWithException()
        {static} + parseWithException()
        {static} + toJSONString()
        {static} + writeJSONString()
        {static} ~ escape()
    }
  }
  

  simple.JSONArray .up.|> simple.JSONAware
  simple.JSONArray .up.|> simple.JSONStreamAware
  simple.JSONArray -up-|> java.util.ArrayList
  simple.JSONObject .up.|> java.util.Map
  simple.JSONObject .up.|> simple.JSONAware
  simple.JSONObject .up.|> simple.JSONStreamAware
  simple.JSONObject -up-|> java.util.HashMap


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
